--- a/ui/package.json
+++ b/ui/package.json
@@ -1,4 +1,5 @@
 {
+	"proxy": "http://localhost:8080",
 	"name": "inframap-ui",
 	"version": "0.0.1",
 	"private": true,
@@ -17,10 +18,12 @@
 		"@playwright/test": "1.28.1",
 		"@sveltejs/adapter-auto": "2.0.0",
 		"@sveltejs/kit": "1.5.0",
+		"@sveltestack/svelte-query": "1.6.0",
 		"@tailwindcss/typography": "0.5.9",
 		"@typescript-eslint/eslint-plugin": "5.45.0",
 		"@typescript-eslint/parser": "5.45.0",
 		"autoprefixer": "^10.4.14",
+		"axios": "1.3.5",
 		"daisyui": "^2.51.5",
 		"eslint": "8.28.0",
 		"eslint-config-prettier": "8.5.0",
@@ -30,6 +33,7 @@
 		"prettier-plugin-svelte": "2.8.1",
 		"svelte": "3.54.0",
 		"svelte-check": "3.0.1",
+		"svelte-loading-spinners": "0.3.4",
 		"tailwindcss": "^3.3.1",
 		"theme-change": "2.5.0",
 		"tslib": "2.4.1",
