--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,13 +12,7 @@ micronaut:
   server:
     cors:
       enabled: true
-      configurations:
-        local:
-          allowedOrigins:
-            - http://127.0.0.1:5173
-        hoppscotch:
-          allowedOrigins:
-            - chrome-extension://amknoiejhlmhancpahfcfcfhllgkpbld
+      localhostPassThrough: true
 netty:
   default:
     allocator:
