--- a/ui/package.json
+++ b/ui/package.json
@@ -17,6 +17,7 @@
 	"devDependencies": {
 		"@playwright/test": "1.32.3",
 		"@sveltejs/adapter-auto": "2.0.0",
+		"@sveltejs/adapter-cloudflare": "2.2.0",
 		"@sveltejs/kit": "1.15.5",
 		"@sveltestack/svelte-query": "1.6.0",
 		"@tailwindcss/typography": "0.5.9",
