--- a/ui/package.json
+++ b/ui/package.json
@@ -21,10 +21,12 @@
 		"@sveltejs/kit": "1.15.5",
 		"@sveltestack/svelte-query": "1.6.0",
 		"@tailwindcss/typography": "0.5.9",
+		"@types/d3": "7.4.0",
 		"@typescript-eslint/eslint-plugin": "5.58.0",
 		"@typescript-eslint/parser": "5.58.0",
 		"autoprefixer": "^10.4.14",
 		"axios": "1.3.5",
+		"d3": "7.8.4",
 		"daisyui": "^2.51.5",
 		"eslint": "8.38.0",
 		"eslint-config-prettier": "8.8.0",
